11983
Since I just looked up the issues, I'll also paste the joke:

Backticks are the worst bugs because they carry Lyme disease.

scala/bug#6919

scala/bug#7957

Actually, the duplicate is scala/bug#8456

The double literal is due to the selection `$iw.1`.

Here is a related, possibly unexpected result:
```scala
$ scala
Welcome to Scala 2.11.8 (Java HotSpot(TM) 64-Bit Server VM 1.8.0_60)
Type in expressions for evaluation. Or try :help.

scala> .1
<console>:1: error: ';' expected but double literal found.
$intp.1
     ^
```

